added eventlistener and search bar

--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
       rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <title>Project 1</title>
+    <title>So_you_want_a_hotel?</title>
 </head>
 <body>
 <!-- Carousel wrapper -->
 <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
   <!-- Indicators -->
   <div class="carousel-indicators">
-    <button
+    <div> Search for a City <input id="citySearch" type="text"></div>
+    <button id = "searchBtn"
       type="button"
       data-mdb-target="#carouselBasicExample"
       data-mdb-slide-to="0"
       class="active"
       aria-current="true"
       aria-label="Slide 1"
-    ></button>
+    >Search</button>
+
+    <div id = "resultsContainer"></div>
     <button
       type="button"
       data-mdb-target="#carouselBasicExample"
