--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel">
   <!-- Indicators -->
   <div class="carousel-indicators">
-    <div> Search for a City <input id="citySearch" type="text"></div>
-    <button id = "searchBtn"
+    <button
       type="button"
       data-mdb-target="#carouselBasicExample"
       data-mdb-slide-to="0"
       class="active"
       aria-current="true"
       aria-label="Slide 1"
-    >Search</button>
+    ></button>
 
-    <div id = "resultsContainer"></div>
     <button
       type="button"
       data-mdb-target="#carouselBasicExample"
@@ -82,8 +80,17 @@
 </div>
 <!-- Carousel wrapper -->
     
+<div> Search for a City <input id="citySearch" type="text"></div>
+    <button id = "searchBtn"
+      type="button"
+      data-mdb-target="#carouselBasicExample"
+      data-mdb-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    >Search</button>
 
-    
+<div id = "resultsContainer"></div>
 
 
 
