--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </div>
 <!-- Carousel wrapper -->
     
-<div> Search for a City <input id="citySearch" type="text"></div>
+<div class="search"> Search for a City <input id="citySearch" type="text">
     <button id = "searchBtn"
       type="button"
       data-mdb-target="#carouselBasicExample"
@@ -89,6 +89,7 @@
       aria-current="true"
       aria-label="Slide 1"
     >Search</button>
+  </div>
 
 <div id = "resultsContainer"></div>
 
@@ -105,10 +106,14 @@
 
 
 <!-- Map will be appended here -->
-<div></div>
+<div id="map"></div>
 
 <footer></footer>
 
+<script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkdGsW0ip6RE6HWo3OCucEp3QqAfXvh-U&callback=initMap&v=weekly"
+      defer
+    ></script>
 <script
   src="https://code.jquery.com/jquery-3.6.4.min.js"
   integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
