--- a/index.html
+++ b/index.html
@@ -90,32 +90,18 @@
 
 
 <div class="search">
-  <div class="searchtitle"> Search for a City: <input id="citySearch" type="text"></div>
+  <div class="searchtitle"> Search for a City: <input id="citySearch" type="text">
   <button type="button" id="searchBtn" class="btn btn-primary">Search</button>
+</div>
 </div>
 
 <div id = "resultsContainer"></div>
 
 
-    
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 <!-- Map will be appended here -->
 <div id="map"></div>
-
-<footer></footer>
-
-<script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkdGsW0ip6RE6HWo3OCucEp3QqAfXvh-U&callback=initMap&v=weekly"
       defer
     ></script>
