updated name in html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
       rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <title>So_you_want_a_hotel?</title>
+    <title>So_youre_looking_for_a_hotel?</title>
 </head>
 
 <body>
 <!--Header-->
   <header class="header">
-    <h1>So You Want to Book a Hotel?</h1>
+    <h1>So You're Looking for a Hotel?</h1>
   </header>
 
 <!-- Carousel -->
@@ -99,7 +99,7 @@
       <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
         <h5 class="text-uppercase">About us</h5>
           <p>
-              Our mission at So You Want to Book a Hotel is to provide our users with the best possible hotel booking experience. 
+              Our mission at So You're Looking for a Hotel is to provide our users with the best possible hotel booking experience. 
               We are committed to providing accurate and up-to-date information on all the hotels in the area of your choosing. 
               Our goal is to help our users find the perfect hotel for their needs, while providing exceptional customer service every step of the way.
           </p>
@@ -108,7 +108,7 @@
     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
         <h5 class="text-uppercase">Our Thanks</h5>
           <p>
-              Thank you for using So You Want to Book a Hotel! 
+              Thank you for using So You're Looking for a Hotel! 
               We hope that our platform has helped you find the perfect accommodation for your trip. 
               If you have any questions or feedback, please don't hesitate to contact us. 
               We wish you a wonderful stay at your chosen hotel and safe travels!
