added search history to local storage and styling

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 <!--Map & results-->
   <div id = "resultsContainer"></div>
   </div> 
+  <!--Map & results-->
+  <!-- historical search container -->
+  <div id="topCityContainer"></div>
   <div id="map"></div>
 
 <!--Footer-->
