storage buttons fixed and centered. Final commit :)

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div> 
   <!--Map & results-->
   <!-- historical search container -->
-  <div id="topCityContainer"></div>
+  <div id="topCityContainer" class="text-center"></div>
   <div id="map"></div>
 
 <!--Footer-->
@@ -116,7 +116,6 @@
               If you have any questions or feedback, please don't hesitate to contact us. 
               We wish you a wonderful stay at your chosen hotel and safe travels!
           </p>
-          <p><b>Contact Us</b>: (888)888-8888</p> 
     </div>
    </div>
   </div>
